AppShim: Fix race when extension is unloaded

This bug has been present in ExtensionAppShimHandler for a very long
time, but has started appearing in the context of PWAs.

If an extension is uninstalled while it is in use, then there exists a
race in  ExtensionAppShimHandler::OnBrowserRemoved wherein may no
longer be an extension for the Browser, causing an early out, which
then causes two sources of badness (1) an invalid pointer hanging out
in |app_browser_windows_| and (2) the AppShimHost won't exit.

Fix the bug by doing a more thorough search through
|app_browser_windows_|, without reference to the actual Extension
pointer (as it may no longer exist).

Bug: 921456
Change-Id: Ica1e2c40332e932f979791478d3dac1dab2c07a6
Reviewed-on: https://chromium-review.googlesource.com/c/1411214
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623606}
Former-commit-id: add9e90c4c9f78106942717c988c41ee824d598d